[project]
name = "orchestrator-viz"
version = "0.1.0"
description = "Visualisation for workflow tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.9.4",
    "ruff>=0.11.0",
]


[project.scripts]
wf-tree = "viz.tree:main"
wf-table = "viz.table:main"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]